Change site title

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://photos.robinclowers.com
-title: My photo site
+title: Robin's Photos
 subtitle: Pictures from around the world
 author: Robin Clowers
 simple_search: http://google.com/search
